--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
     "compilerOptions": {
-        "target": "es6",
-        "outDir": "web/public/js"
+        "target": "es5",
+        "module": "commonjs",
+        "outDir": "build"
     }
 }
